# Arceo

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  action.yml  arceo.yaml  example-arceo.yaml  website_fixed.jsx
.claude/: settings.local.json
.github/workflows/: arceo.yml  tests.yml
agents/: devops.py  support.py
arceo/: pyproject.toml  setup.py
arceo/arceo/: __init__.py  ci.py  cli.py  client.py  config.py  decorator.py  models.py  parser.py  report.py  scanner.py
arceo/arceo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
arceo/arceo/analysis/: __init__.py  risk.py
arceo/arceo/frameworks/: __init__.py  anthropic_sdk.py  crewai_sdk.py  langchain.py  openai_sdk.py  vanilla.py
arceo/arceo/tracing/: __init__.py  context.py
arceo/tests/: test_parser.py  test_risk.py  test_vanilla.py
backend/: .env.example  .gitignore  README.MD  auth.py  db.py  main.py  register_20_agents.py  requirements.txt  simulate_company.py
backend/analysis/: cost_defaults.yaml  cost_model.py  prelaunch.py
backend/authority/: action_mapper.py  chain_detector.py  graph.py  parser.py  risk_classifier.py
backend/ingestion/: base.py  langfuse.py  langsmith.py
backend/sandbox/: analyzer.py  boundary_tester.py  models.py  multi_runner.py  red_team.py  runner.py  trace_replay.py
examples/: anthropic_sdk_agent.py  langchain_agent.py  openai_sdk_agent.py  real_stripe_agent.py
mcp-servers/: billing_agent.py
sdk/: README.md  setup.py
website/: .env.local  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+331 files in other folders)
